# visual-network

./: .gitignore
.github/: CODEOWNERS
.github/workflows/: build-visual-network-angular-ui.yaml  build-visual-network-nextjs-ui.yaml  build-visual-network-opengl.yaml  build-visual-network-vulkan.yaml
visual-network-angular-ui/: .prettierignore  .prettierrc  README.md  angular.json  package-lock.json  package.json
visual-network-angular-ui/src/: index.html  main.server.ts  main.ts  server.ts
visual-network-angular-ui/src/app/: app.config.server.ts  app.config.ts  app.css  app.html  app.routes.server.ts  app.routes.ts  app.spec.ts  app.ts
visual-network-angular-ui/src/app/features/acn/: acn-canvas-renderer.service.ts  acn-canvas.component.ts  acn-page.component.spec.ts  acn-page.component.ts  acn-state.service.spec.ts  acn-state.service.ts  acn.data.ts  acn.models.ts
visual-network-angular-ui/src/app/features/bcdr/: bcdr-canvas-renderer.service.ts  bcdr-canvas.component.ts  bcdr-page.component.spec.ts  bcdr-page.component.ts  bcdr-state.service.spec.ts  bcdr-state.service.ts  bcdr.data.ts  bcdr.models.ts
visual-network-angular-ui/src/app/features/cen/: cen-canvas-renderer.service.ts  cen-canvas.component.ts  cen-page.component.spec.ts  cen-page.component.ts  cen-state.service.spec.ts  cen-state.service.ts  cen.data.ts  cen.models.ts
visual-network-nextjs-ui/: .prettierignore  .prettierrc  package-lock.json  package.json
visual-network-opengl/: .editorconfig  CMakeLists.txt  CMakePresets.json  vcpkg.json
visual-network-vulkan/: .clang-format  .clang-tidy  CMakeLists.txt  README.md  build.sh  vcpkg-configuration.json
(+79 files in other folders)
